src/test/resources/example/cocos/valid/validInvariantName.ocl
import example.CDs.AuctionCD.*;
import example.CDs.DefaultTypes.*;

ocl validInvariantName {
  context AllData _ad, Auction a inv InvName:
    _ad.auction[a.auctionIdent] == a;
}
