src/test/resources/example/cocos/invalid/invalidFileName.ocl
import example.CDs.AuctionCD.*;
import example.CDs.DefaultTypes.*;

ocl Association1 {
  context AllData _ad, Auction a inv Test :
     _ad.auction[a.auctionIdent] == a;
}
